bug 61179, deleting menuitem causes crash, r=ssu@netscape.com, sr=hyatt@netscape.com